謎にAI君がGoF式じゃなかったのでGoF式に変更。変更部分要チェックの必要あり。

--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="cpp\manager\default_vertex.cpp" />
     <ClCompile Include="cpp\manager\shader_manager.cpp" />
     <ClCompile Include="cpp\manager\texture_manager.cpp" />
+    <ClCompile Include="cpp\object\3d_object.cpp" />
     <ClCompile Include="cpp\object\camera.cpp" />
     <ClCompile Include="cpp\object\field.cpp" />
     <ClCompile Include="cpp\object\game_object.cpp" />
