--- a/GenomeHacker.vcxproj.filters
+++ b/GenomeHacker.vcxproj.filters
@@ -485,6 +485,9 @@
     <ClCompile Include="cpp\scene\state\setting_state.cpp">
       <Filter>ソース ファイル\scene\state</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\object\3d_object.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shader\unlitTextureVS.hlsl">
