--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -38,6 +38,8 @@
     <ClInclude Include="hedder\enemy\node\base.h" />
     <ClInclude Include="hedder\enemy\node\move_x.h" />
     <ClInclude Include="hedder\enemy\node\move_z.h" />
+    <ClInclude Include="hedder\enemy\node\number.h" />
+    <ClInclude Include="hedder\enemy\node\socket\number_socket.h" />
     <ClInclude Include="hedder\enemy\node_tab\attack.h" />
     <ClInclude Include="hedder\enemy\node_tab\death.h" />
     <ClInclude Include="hedder\enemy\node_tab\enemy_dna_list.h" />
@@ -108,6 +110,8 @@
     <ClCompile Include="cpp\enemy\node\base.cpp" />
     <ClCompile Include="cpp\enemy\node\move_x.cpp" />
     <ClCompile Include="cpp\enemy\node\move_z.cpp" />
+    <ClCompile Include="cpp\enemy\node\number.cpp" />
+    <ClCompile Include="cpp\enemy\node\socket\number_socket.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\attack.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\death.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\dnatab_button.cpp" />
